# acp-forge

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.grok/: config.toml  hooks.yaml
.grok/skills/forge-overlaps/: SKILL.md
.grok/skills/forge-session/: SKILL.md
crates/acp-forge-cli/: Cargo.toml
crates/acp-forge-cli/src/: main.rs
crates/acp-forge-cli/src/commands/: init.rs  mod.rs  overlaps.rs  session.rs  skill.rs  spawn.rs  status.rs
crates/acp-forge-core/: Cargo.toml
crates/acp-forge-core/src/: agent.rs  error.rs  id.rs  lib.rs  orchestrator.rs  task.rs
crates/acp-forge-graph/: Cargo.toml
crates/acp-forge-graph/src/: error.rs  event.rs  hasher.rs  lib.rs  recorder.rs  replay.rs  session.rs
crates/acp-forge-skills/: Cargo.toml
crates/acp-forge-skills/src/: compose.rs  error.rs  grok_compat.rs  lib.rs  loader.rs  registry.rs  skill.rs  template.rs
crates/acp-forge-web/: Cargo.toml
crates/acp-forge-web/src/: cache.rs  error.rs  lib.rs  provider.rs  verify.rs
crates/acp-forge-worktree/: Cargo.toml
crates/acp-forge-worktree/src/: divergence.rs  error.rs  git.rs  lib.rs  pool.rs
docs/: TUTORIAL.md
examples/skills/: api-docs.toml  code-review.toml  test-gen.toml
examples/skills/security-audit/: SKILL.md
