[package]
name = "acp-forge-cli"
description = "CLI for ACP Forge — multi-agent orchestration for xAI Grok Build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "acp-forge"
path = "src/main.rs"

[dependencies]
acp-forge-core.workspace = true
acp-forge-worktree.workspace = true
acp-forge-graph.workspace = true
acp-forge-skills.workspace = true
acp-forge-web.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
