[package]
name = "acp-forge-core"
description = "Core types and orchestration primitives for ACP Forge — multi-agent framework for xAI Grok Build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agent-client-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
