[package]
name = "acp-forge-skills"
description = "Skill templates and registry for ACP Forge — compatible with xAI Grok Build SKILL.md format"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acp-forge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
